...
}

object PublicInfoTestTags {

  // ROOT
  const val PUBLIC_INFO = "public_info_root"
  const val HANDLE_INFO_ICON = "handle_info_icon"

  // ------------------------------------------------------------
  // SECTION 1 — Avatar
  // ------------------------------------------------------------
  const val AVATAR_CONTAINER = "public_info_avatar_container"
  const val AVATAR_IMAGE = "public_info_avatar_image"
...
  // SECTION 4 — Businesses
  // ------------------------------------------------------------
  const val BUSINESS_CARD = "businesses_section"
}

object EmailVerificationTestTags {
  const val VERIFICATION_SECTION = "verification_section"
  const val USER_EMAIL = "user_email"
  const val RESEND_MAIL_VERIFICATION_BTN = "resend_mail_verification_btn"
}

object PrivateInfoTestTags {

  // ------------------------------------------------------------
  // PRIVATE INFO ROOT
...
  // EMAIL SECTION
  // ------------------------------------------------------------
  const val EMAIL_SECTION = "email_section"
  const val EMAIL_INPUT = "email_input"

  const val EMAIL_SEND_BUTTON = "email_send_verification_btn"
  const val EMAIL_TOAST = "email_section_toast"
  const val EMAIL_ERROR_LABEL = "email_error_label"

  // ------------------------------------------------------------
  // ROLES SECTION
  // ------------------------------------------------------------
  const val ROLE_SHOP_CHECKBOX = "role_checkbox_shop_owner"
...
