...
  const val PHOTO_DIALOG_GALLERY_BUTTON = "PhotoDialogGalleryButton"
  const val CONFIRMATION_DIALOG = "ConfirmationDialog"
  const val CONFIRMATION_DIALOG_TITLE = "ConfirmationDialogTitle"
  const val CONFIRMATION_DIALOG_MESSAGE = "ConfirmationDialogMessage"
  const val CONFIRMATION_DIALOG_CONFIRM = "ConfirmationDialogConfirm"
  const val CONFIRMATION_DIALOG_CANCEL = "ConfirmationDialogCancel"
  const val CLOSABLE_TOAST = "ClosableToast"
  const val CLOSABLE_TOAST_CLOSE_BUTTON = "ClosableToastCloseButton"
  const val USER_PROFILE_POPUP_DESCRIPTION = "UserProfilePopupDescription"
  const val USER_PROFILE_POPUP_HANDLE = "UserProfilePopupHandle"
  const val USER_PROFILE_POPUP_USERNAME = "UserProfilePopupUsername"
  const val USER_PROFILE_POPUP_AVATAR = "UserProfilePopupAvatar"
  const val USER_PROFILE_POPUP_BLOCK_BUTTON = "UserProfilePopupBlockButton"
  const val USER_PROFILE_POPUP_SEND_REQUEST_BUTTON = "UserProfilePopupSendRequestButton"
...
