...
                            onClick = {
                              viewModel.selectPin(gp) // Open preview for this pin
                              true
                            },
                            icon = icon,
                            anchor = Offset(0.5f, 0.5f),
                            tag = MapScreenTestTags.getTestTagForPin(gp.geoPin.uid))
                      } else {
                        // Cluster with multiple pins, create a cluster icon
                        val clusterIcon = rememberClusterIcon(size = size)
                        Marker(
                            state = MarkerState(pos),
                            title = "Cluster ($size)",
...
